# vexor

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
crates/vexor-cli/: Cargo.toml
crates/vexor-cli/src/: main.rs
crates/vexor-cli/src/commands/: bench.rs  compile.rs  file_watch.rs  gui.rs  mod.rs  watch.rs
crates/vexor-cli/tests/: mod.rs
crates/vexor-cli/tests/perf/: mod.rs
crates/vexor-cli/tests/perf/cases/: closure_capture.vx  higher_order.vx  list_ops.vx  nested_groups.vx  paths.vx  recursion.vx  sort.vx
crates/vexor-compiler/: Cargo.toml
crates/vexor-compiler/src/: lib.rs
crates/vexor-compiler/src/evaluator/: data_structure.rs  expr.rs  graphic.rs  list.rs  mod.rs  program.rs
crates/vexor-compiler/src/evaluator/expr/: bool.rs  color.rs  constants.rs  function.rs  graphic.rs  list.rs  matcher.rs  mod.rs  number.rs  operator.rs  string.rs  types.rs
crates/vexor-compiler/src/exporter/: mod.rs  svg_export.rs  svg_file.rs
crates/vexor-compiler/src/ir/: ast.rs  mod.rs  path.rs  scene.rs
crates/vexor-compiler/src/ir/typed/: ast.rs  expr.rs  mod.rs
crates/vexor-compiler/src/parser/: call.rs  error.rs  expr.rs  function.rs  graphic.rs  keyword.rs  mod.rs  object.rs  program.rs
crates/vexor-compiler/src/parser/common/: keyword.rs  mod.rs
crates/vexor-compiler/src/type_checker/: expr.rs  mod.rs  program.rs
crates/vexor-compiler/tests/: integration.rs  mod.rs
crates/vexor-compiler/tests/correctness/: README.md  mod.rs
crates/vexor-compiler/tests/correctness/cases/: basic.vx  closure.vx  composition.vx  conditional.vx  export_each.vx  function.vx  lazy_eval.vx  list.vx  list_access.vx  list_fns.vx  match.vx  match_shadow.vx  maths.vx  mutual_recursion.vx  recursion.vx  tuple.vx
crates/vexor-compiler/tests/golden/: mod.rs
crates/vexor-compiler/tests/golden/compilation/: mod.rs
crates/vexor-compiler/tests/golden/compilation/input/: attributes.vx  basic.vx  curves.vx  ellipse.vx  group.vx  mirror.vx  paths.vx  precision.vx  sample_path.vx  snake.vx  style.vx  transforms.vx  wave.vx
crates/vexor-compiler/tests/golden/error/: mod.rs
crates/vexor-compiler/tests/golden/error/input/: basic.vx  circle_arity.vx  conditional.vx  duplicate.vx  fn_dup_param.vx  fn_missing_body.vx  fn_missing_name.vx  functions.vx  head_empty.vx  if_missing_braces.vx  if_missing_else.vx  keyword_as_ident.vx  lambda_missing_body.vx  list_range.vx  list_range2.vx  match_duplicate.vx  match_empty.vx  match_missing_arrow.vx  move_arity.vx  no_export.vx  nth_oob.vx  range.vx  rect_arity.vx  stroke_arity.vx  stroke_join_invalid.vx  unclosed_string.vx  unknown_operator.vx
crates/vexor-compiler/tests/golden/error/output/: basic.err  circle_arity.err  conditional.err  duplicate.err  fn_dup_param.err  fn_missing_body.err  fn_missing_name.err  functions.err  head_empty.err  if_missing_braces.err  if_missing_else.err  keyword_as_ident.err  lambda_missing_body.err  list_range.err  list_range2.err  match_duplicate.err  match_empty.err  match_missing_arrow.err  move_arity.err  no_export.err  nth_oob.err  range.err  rect_arity.err  (+4 more)
(+25 files in other folders)
