[workspace]
members = ["crates/*"]
default-members = ["crates/vexor-cli"]
resolver = "3"

[workspace.package]
name = "vexor"
version = "0.1.0"
edition = "2024"
authors = ["baeks"]
repository = "https://github.com/baeks215/vexor"
license = "Apache-2.0"

[workspace.dependencies]
vexor-compiler = { path = "crates/vexor-compiler" }
vexor-gui = { path = "crates/vexor-gui" }
winnow = "0.7.14"
salsa = "0.25.2"
clap = "4.5.57"
