[workspace]
members = ["crates/*"]
default-members = ["crates/vexor-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["baeks"]
repository = "https://github.com/baeks215/vexor"
license = "Apache-2.0"

[workspace.dependencies]
vexor-compiler = { path = "crates/vexor-compiler" }
vexor-gui = { path = "crates/vexor-gui" }
winnow = "1.0.0"
clap = "4.6.0"
svg = "0.18.0"
itertools = "0.14.0"
