[workspace]
members = ["crates/*"]
default-members = ["crates/vexor-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["baeks"]
repository = "https://github.com/baeks215/vexor"
license = "Apache-2.0"

[workspace.dependencies]
vexor-compiler = { path = "crates/vexor-compiler" }
vexor-gui = { path = "crates/vexor-gui" }
winnow = "1.0.0"
clap = "4.6.0"
svg = "0.18.0"
im-rc = "15.1.0"
itertools = "0.14.0"
kurbo = "0.13.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
eframe = "0.34.2"
egui_extras = "0.34.2"
ariadne = "0.6.0"
goldenfile = "1.11.0"
assert_matches = "1.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
allow-dirty = ["ci"]
