[package]
name = "vexor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "vexor"
path = "src/main.rs"

[dependencies]
vexor-compiler.workspace = true
vexor-gui.workspace = true
eframe.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
clap = { workspace = true, features = ["derive"] }
stats_alloc.workspace = true
