[package]
name = "vexor-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
winnow.workspace = true
svg.workspace = true
itertools.workspace = true

[dev-dependencies]
# winnow = {workspace = true, features = ["debug"]}
assert_matches.workspace = true
