[package]
name = "vexor-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
winnow.workspace = true
svg.workspace = true
kurbo.workspace = true
itertools.workspace = true
im-rc.workspace = true


[dev-dependencies]
# winnow = {workspace = true, features = ["debug"]}
assert_matches.workspace = true
goldenfile.workspace = true
